RESOLVED FIXED202546
[WinCairo] Remote Inspector doesn't gracefully shutdown
https://bugs.webkit.org/show_bug.cgi?id=202546
Summary [WinCairo] Remote Inspector doesn't gracefully shutdown
Christopher Reid
Reported 2019-10-03 15:18:03 PDT
Windows sockets need to call shutdown before closesocket. https://docs.microsoft.com/en-us/windows/win32/api/winsock/nf-winsock-closesocket This causes some issues when the client closed then immediately initiated a new connection. The close isn't being seen by the server until much later causing the accept call to fail.
Attachments
patch (3.28 KB, patch)
2019-10-03 15:33 PDT, Christopher Reid
no flags
Rebased patch (3.34 KB, patch)
2019-10-03 15:41 PDT, Christopher Reid
no flags
Christopher Reid
Comment 1 2019-10-03 15:33:32 PDT
Christopher Reid
Comment 2 2019-10-03 15:41:39 PDT
Created attachment 380166 [details] Rebased patch
WebKit Commit Bot
Comment 3 2019-10-03 22:05:07 PDT
Comment on attachment 380166 [details] Rebased patch Clearing flags on attachment: 380166 Committed r250699: <https://trac.webkit.org/changeset/250699>
WebKit Commit Bot
Comment 4 2019-10-03 22:05:08 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-10-03 22:06:15 PDT
Note You need to log in before you can comment on or make changes to this bug.