[WinCairo] Remote Inspector doesn't gracefully shutdown https://bugs.webkit.org/show_bug.cgi?id=202546

Reviewed by Ross Kirsling.

Call shutdown before closesocket in windows to close the connection gracefully.

This also fixes some potential threading issues where m_clientConnection
is set on a worker thread but cleared on the main thread.
Remove callOnMainThread in the server too since execution gets paused during JS breakpoints.

* inspector/remote/socket/RemoteInspectorServer.cpp:
* inspector/remote/socket/win/RemoteInspectorSocketWin.cpp:


Canonical link: https://commits.webkit.org/216040@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250699 268f45cc-cd09-0410-ab3c-d52691b4dbfc